[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Gregor Lämmel <GrgrLmml@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyterlab = "^4.1.6"
pydantic = "^2.7.0"
groq = "^0.5.0"
python-dotenv = "^1.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
